# openfpm_numerics

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile.am  build_numerics.sh  configure.ac  mpi_include  mpi_libs  openfpm_numerics.doc  run.sh
m4/: ax_cuda.m4  ax_petsc_lib.m4  ax_suitesparse.m4
src/: CMakeLists.txt  Makefile.am  main.cpp  unit_test_init_cleanup.hpp
src/BoundaryConditions/: MethodOfImages.hpp  SurfaceNormal.hpp
src/BoundaryConditions/tests/: method_of_images_cylinder_unit_test.cpp  method_of_images_unit_test.cpp
src/BoundaryConditions/tests/libForTesting/: HelpFunctionsForTestingNBCs.hpp
src/DCPSE/: Dcpse  Dcpse.cuh  Dcpse.hpp  DcpseDiagonalScalingMatrix.hpp  DcpseInterpolation.hpp  DcpseRhs.cuh  DcpseRhs.hpp  Monomial.cuh  Monomial.hpp  MonomialBasis.hpp  Support.hpp  SupportBuilder.cuh  SupportBuilder.hpp  Vandermonde.cuh  Vandermonde.hpp  VandermondeRowBuilder.hpp
src/DCPSE/DCPSE_op/: DCPSE_Solver.cuh  DCPSE_Solver.hpp  DCPSE_op.hpp  DCPSE_surface_op.hpp  EqnsStruct.hpp  SphericalHarmonics.hpp
src/DCPSE/DCPSE_op/tests/: 3d.cpp  DCPSEActiveGelTest.cpp  DCPSE_Bench.cpp  DCPSE_op_Solver_test.cpp  DCPSE_op_Solver_test.cu  DCPSE_op_Surface_subset_tests.cpp  DCPSE_op_Surface_tests.cpp  DCPSE_op_subset_test.cpp  DCPSE_op_subset_test.cu  DCPSE_op_test2.cpp  DCPSE_op_test3d.cpp  DCPSE_op_test_base_tests.cpp  DCPSE_op_test_base_tests.cu  DCPSE_op_test_temporal.cpp  DCPSE_op_test_temporal.cu  Fast_test.cpp  Scartch space.cpp
src/DCPSE/tests/: DcpseRhs_unit_tests.cpp  Dcpse_unit_tests.cpp  MonomialBasis_unit_tests.cpp  Support_unit_tests.cpp  Vandermonde_unit_tests.cpp
src/DCPSE_op/: 3d.cpp  DCPSEActiveGelTest.cpp  DCPSE_Solver.hpp  DCPSE_op.hpp  DCPSE_op_subset_test.cpp  DCPSE_op_test.cpp  DCPSE_op_test2.cpp  DCPSE_op_test3d.cpp  EqnsStruct.hpp  EqnsStructEigen.hpp  EqnsStructPetsc.hpp  Fast_test.cpp  Scartch space.cpp
src/DCPSE_op/DCPSE_copy/: Dcpse.hpp  DcpseDiagonalScalingMatrix.hpp  DcpseRhs.hpp  MonomialBasis.hpp  Support.hpp  SupportBuilder.hpp  Vandermonde.hpp
src/DCPSE_op/DCPSE_copy/mod/: Dcpse.hpp
src/DMatrix/: EMatrix.hpp
src/DMatrix/tests/: EMatrix_unit_tests.cpp
src/Draw/: DrawCircle.hpp  DrawDisk.hpp  DrawParticles.hpp  DrawParticlesGrid.hpp  DrawParticles_unit_tests.hpp  DrawSphere.hpp  PointIterator.hpp  PointIteratorSkin.hpp
src/Equations/: eq_1_ag_unit_test.hpp  eq_2_ag_unit_test.hpp  eq_base_unit_test.hpp  eq_unit_tests.hpp  stoke_flow_eq_3d.hpp
src/FiniteDifference/: Average.hpp  Derivative.hpp  Eno_Weno.hpp  FDScheme.hpp  FDScheme_unit_tests.cpp  FDScheme_unit_tests.hpp  FD_Solver.hpp  FD_Solver_test.cpp  FD_expressions.hpp  FD_op.hpp  FD_op_Tests.cpp  FD_order1.hpp  FD_simple.hpp  FD_util_include.hpp  Laplacian.hpp  System.hpp  Upwind_gradient.hpp  eq.hpp  eq_unit_test.cpp  eq_unit_test.hpp  eq_unit_test_3d.cpp  eq_unit_test_3d.hpp  mul.hpp  operators.hpp  operators_unit_test.cpp  sum.hpp
src/FiniteDifference/tests/: Eno_Weno_unit_test.cpp  FD_order1_unit_test.cpp  FD_simple_unit_test.cpp  Gaussian.hpp  Upwind_gradient_unit_test.cpp  Upwind_gradient_unit_test.hpp.cpp
src/FiniteDifference/util/: EqnsStructFD.hpp  common.hpp  common_test.hpp
src/Matrix/: Matrix.hpp  SparseMatrix.hpp  SparseMatrix_Eigen.hpp  SparseMatrix_petsc.hpp  SparseMatrix_unit_tests.cpp  SparseMatrix_unit_tests.hpp
src/MatrixAssembler/: MatrixAssembler.hpp
src/OdeIntegrators/: OdeIntegrators.hpp  boost_vector_algebra_ofp.hpp  vector_algebra_ofp.hpp  vector_algebra_ofp_gpu.hpp
src/OdeIntegrators/tests/: OdeIntegrator_grid_tests.cpp  OdeIntegratores_base_tests.cpp  Odeintegrators_test_gpu.cu
src/Operators/Vector/: vector_dist_operator_assign.hpp  vector_dist_operators.hpp  vector_dist_operators_apply_kernel.hpp  vector_dist_operators_apply_kernel_unit_tests.cpp  vector_dist_operators_apply_kernel_unit_tests.cu  vector_dist_operators_apply_kernel_unit_tests.hpp  vector_dist_operators_extensions.hpp  vector_dist_operators_functions.hpp  vector_dist_operators_unit_tests.cpp  vector_dist_operators_unit_tests.cu  vector_dist_operators_unit_tests.hpp
src/Operators/Vector/cuda/: vector_dist_operators_cuda.cuh
src/Operators/Vector/tests/: vector_dist_operators_tests_util.hpp
src/PSE/: Kernels.hpp  Kernels_test_util.hpp  Kernels_unit_tests.hpp
src/Solvers/: petsc_solver.hpp  petsc_solver_AMG_report.hpp  petsc_solver_ASM_AMG_to_do.hpp  petsc_solver_report_unit_tests.hpp  petsc_solver_unit_tests.cpp  umfpack_solver.hpp
src/Vector/: Vector.hpp  Vector_eigen.hpp  Vector_eigen_util.hpp  Vector_petsc.hpp  Vector_unit_tests.cpp  Vector_unit_tests.hpp  Vector_util.hpp
src/config/: config_cmake.h.in
src/initialize/: initialize_wrapper_cpu.cpp  initialize_wrapper_cuda.cu
src/interpolation/: interpolation.hpp  interpolation_unit_tests.cpp  interpolation_unit_tests.hpp  lambda_kernel.hpp  mp4_kernel.hpp  z_spline.hpp
src/level_set/closest_point/: closest_point.hpp  closest_point_unit_tests.cpp
src/level_set/particle_cp/: particle_cp.hpp  pcp_unit_test_helpfunctions.h  pcp_unit_tests.cpp
src/level_set/redistancing_Sussman/: ComputeGradient.hpp  GaussFilter.hpp  HelpFunctions.hpp  HelpFunctionsForGrid.hpp  NarrowBand.hpp  RedistancingSussman.hpp  TVD_RK_methods.hpp
src/level_set/redistancing_Sussman/tests/: CMakeLists.txt  TestHelpers.hpp  computeGradient_unit_test.cpp  convergence_test.cpp  help_functions_unit_test.cpp  narrowBand_unit_test.cpp  redistancingSussman_fast_unit_test.cpp  redistancingSussman_unit_test.cpp  single_point_convergence_test.cpp  test.cpp
src/level_set/redistancing_Sussman/tests/analytical_SDF/: AnalyticalSDF.hpp
src/level_set/redistancing_Sussman/tests/l_norms/: LNorms.hpp
src/random/: SprngEngine.hpp
src/random/tests/: SprngEngine_unit_tests.cpp
src/regression/: poly_levelset.hpp  poly_levelset_test.cpp  regression.hpp  regression_test.cpp
src/test_data/: PSE_convergence
src/util/: SphericalHarmonics.hpp  eq_solve_common.hpp  grid_dist_testing.hpp  linalgebra_lib.hpp  mpi_utils.hpp  petsc_util.hpp  util_num.hpp  util_num_unit_tests.hpp
test/: PSE_convergence  PSE_convergence_osx  (+81 more)
(+6 files in other folders)
